add a button with resume link, change my role, and change css for feature - alter title and change color to black between feature articles closes #35 closes #36

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<h1 id="logo">
 						<a href="#one">Eliot Sanford</a>
 					</h1>
-					<p class="monospace">Developer Teacher + Coach</p>
+					<p class="monospace">Software Engineering Contractor</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -60,15 +60,35 @@
 								<div class="container">
 									<header class="major">
 										<h2>Eliot Sanford</h2>
-										<p class="monospace">Developer Teacher + Coach</p>
+										<p class="monospace">Software Engineering Contractor</p>
 									</header>
 									<article>
 										<h3>Welcome to my portfolio page!</h3>
 										<p class="bio-section">I'm excited to share with you some things about me, 
-											what I can do, and have created. I'm currently a full-time high school tech teacher 
-											making a career switch as a web developer. For the past two years, I've been learning 
-											on my own including projects, then at the end of last year I joined a bootcamp in the 
-											evenings. Please browse below and contact me via 
+											what I can do, and have created. I'm currently seeking a full-time role and provide consultation
+											for small businesses as a software engineering contractor. 
+											I taught myself to code five years, and since then, I've always been learning 
+											on my own including developing automated tasks at work, creating personal projects, and 
+											organizing virtual and in-person study groups. I taught myself front-end and back-end 
+											web development while working 
+											as support staff at law firms. I began working as a tech consultant in 2018, and 
+											where I enjoyed building websites, tools, and applications for businesses. 
+											Then in 2019, I transitioned into 
+											teaching web development at a local private school. 
+											At the end of 2019, I joined a bootcamp in the 
+											evenings to mainly receive help with my job search and fill some gaps in 
+											my back-end programming knowledge.
+										</p>
+										<div class="inner">
+											<ul class="feature-icons">	
+												<li>
+													<a href="https://drive.google.com/file/d/1i4mhoFFhAci7rMYGI_ArMhYH6HQ1WM1j/view" target="_blank" rel="noopener noreferrer">
+														<button class="button primary icon fa-file">Please view and share my Resume</button>
+													</a>
+												</li>
+											</ul>
+										</div>
+										<p>Please browse below and contact me via 
 											<a href="#four">the form at the bottom of this page</a>, 
 											<a href="https://twitter.com/techieEliot" target="_blank">Twitter</a>, or 
 											<a href="mailto:techieEliot@gmail.com">my email</a>.
