fix the resume button

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 											<ul class="feature-icons">	
 												<li>
 													<a href="https://drive.google.com/file/d/1i4mhoFFhAci7rMYGI_ArMhYH6HQ1WM1j/view" target="_blank" rel="noopener noreferrer">
-														<button class="button primary icon fa-file">Please view and share my Resume</button>
+														<button class="button primary icon fa-file">View my Resume</button>
 													</a>
 												</li>
 											</ul>
