rearrange contact buttons to be bio section - add new heading and alter internal links - delete readme images

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<a href="#one">
+					<a href="#banner">
 						<span class="image avatar">
 							<img src="images/avatar.jpg" alt="My headshot" />
 						</span>
 					</a>
 					<h1 id="logo">
-						<a href="#one">Eliot Sanford</a>
+						<a href="#banner">Eliot Sanford</a>
 					</h1>
 					<p class="monospace">Software Engineering Contractor</p>
 				</header>
@@ -53,7 +53,7 @@
 					<div id="main">
 
 						<!-- One -->
-							<section id="one">
+							<section id="banner">
 								<div class="image main" data-position="center">
 									<img src="images/banner.jpg" alt="" />
 								</div>
@@ -65,35 +65,13 @@
 									<article>
 										<h3>Welcome to my portfolio page!</h3>
 										<p class="bio-section">I'm excited to share with you some things about me, 
-											what I can do, and have created. I'm currently seeking a full-time role and provide consultation
-											for small businesses as a software engineering contractor. 
-											I taught myself to code five years, and since then, I've always been learning 
-											on my own including developing automated tasks at work, creating personal projects, and 
-											organizing virtual and in-person study groups. I taught myself front-end and back-end 
-											web development while working 
-											as support staff at law firms. I began working as a tech consultant in 2018, and 
-											where I enjoyed building websites, tools, and applications for businesses. 
-											Then in 2019, I transitioned into 
-											teaching web development at a local private school. 
-											At the end of 2019, I joined a bootcamp in the 
-											evenings to mainly receive help with my job search and fill some gaps in 
-											my back-end programming knowledge.
+											what I can do, and have created.
 										</p>
-										<div class="inner">
-											<ul class="feature-icons">	
-												<li>
-													<a href="https://drive.google.com/file/d/1i4mhoFFhAci7rMYGI_ArMhYH6HQ1WM1j/view" target="_blank" rel="noopener noreferrer">
-														<button class="button primary icon fa-file">View my Resume</button>
-													</a>
-												</li>
-											</ul>
-										</div>
 										<p>Please browse below and contact me via 
 											<a href="#four">the form at the bottom of this page</a>, 
 											<a href="https://twitter.com/techieEliot" target="_blank">Twitter</a>, or 
 											<a href="mailto:techieEliot@gmail.com">my email</a>.
 										</p> 
-										
 										<div class="inner">
 											<ul class="feature-icons">	
 												<li>
@@ -114,6 +92,30 @@
 												<li>
 													<a href="mailto:techieEliot@gmail.com" target="_blank">
 														<button class="button primary icon fa-envelope">techieEliot@gmail.com</button>
+													</a>
+												</li>
+											</ul>
+										</div>
+										<h3 id="one">Things About Me</h3>
+										<p class="bio-section">I'm currently seeking a full-time role and provide consultation
+											for small businesses as a software engineering contractor. 
+											I taught myself to code five years, and since then, I've always been learning 
+											on my own including developing automated tasks at work, creating personal projects, and 
+											organizing virtual and in-person study groups. I taught myself front-end and back-end 
+											web development while working 
+											as support staff at law firms. I began working as a tech consultant in 2018, and 
+											where I enjoyed building websites, tools, and applications for businesses. 
+											Then in 2019, I transitioned into 
+											teaching web development at a local private school. 
+											At the end of 2019, I joined a bootcamp in the 
+											evenings to mainly receive help with my job search and fill some gaps in 
+											my back-end programming knowledge.
+										</p>
+										<div class="inner">
+											<ul class="feature-icons">	
+												<li>
+													<a href="https://drive.google.com/file/d/1i4mhoFFhAci7rMYGI_ArMhYH6HQ1WM1j/view" target="_blank" rel="noopener noreferrer">
+														<button class="button primary icon fa-file">View my Resume</button>
 													</a>
 												</li>
 											</ul>
