update: add favicon and new project - add link to the new favicon in index - remove react projects - add the random quote machine site

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<title>Eliot Sanford's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="icon" href="./images/favicon.ico" sizes="64x64" type="image/x-icon">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<script src="https://kit.fontawesome.com/e661112737.js" crossorigin="anonymous"></script>
 	</head>
@@ -173,40 +174,30 @@
 														<a href="https://kikisaver.site" target="_blank">Kiki Saver</a>
 													</li>
 													<li class="fa-react">
-														<a href="https://anecdote.netlify.app/" target="_blank">Anecdote App</a>
+														<a href="https://random-quote-machine-techieEliot.netlify.app/" target="_blank">Random Quote Machine App</a>
 													</li>
-													<li class="fa-react">
-														<a href="https://github.com/techieeliot/fullstack-react-2019/tree/master/part1/b__unicafe__" target="_blank">Feedback App</a>
+												</ul>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic02.jpg" alt="man with colorful socks seated in a chair crossed-legged reading javascript & jquery" /></a>
+											<div class="inner">
+												<h4>SQL and JavaScript Sites</h4>
+												<p>Since the beginning of April 2019, I have created sites with these technologies.
+												</p>
+												<ul class="feature-icons">
+													<li class="fa-database">
+														<a href="https://github.com/techieeliot/legendary-palm-tree" target="_blank">SQL CRUD Files</a>
 													</li>
-													<li class="fa-react">
-														<a href="https://techieeliot.github.io/jsforwp-conf-workshop-2019-eliot-react/" target="_blank">Image Box Page</a>
+													<li class="fa-js-square">
+															<a href="https://ms-coding-shopping-cart.netlify.app/" target="_blank">Shopping Cart</a>
+														</li>
+													<li class="fa-js-square">
+														<a href="https://ms-coding-tic-tac-toe.netlify.app/" target="_blank">Tic Tac Toe</a>
 													</li>
-													<li class="fa-tools">
-														<a href="https://techieeliot.github.io/magnoliaJS/" target="_blank">Web Components Workshop</a>
+													<li class="fa-js-square">
+														<a href="ms-coding-to-do-list.netlify.app" target="_blank">To-Do List</a>
 													</li>
-														</ul>
-													</div>
-												</article>
-												<article>
-													<a href="#" class="image"><img src="images/pic02.jpg" alt="man with colorful socks seated in a chair crossed-legged reading javascript & jquery" /></a>
-													<div class="inner">
-														<h4>SQL and JavaScript Sites</h4>
-														<p>Since the beginning of April 2019, I have created sites with these technologies.
-														</p>
-														<ul class="feature-icons">
-															<li class="fa-database">
-																<a href="https://github.com/techieeliot/legendary-palm-tree" target="_blank">SQL CRUD Files</a>
-															</li>
-															<li class="fa-js-square">
-																	<a href="https://ms-coding-shopping-cart.netlify.app/" target="_blank">Shopping Cart</a>
-																</li>
-															<li class="fa-js-square">
-																<a href="https://ms-coding-tic-tac-toe.netlify.app/" target="_blank">Tic Tac Toe</a>
-															</li>
-															<li class="fa-js-square">
-																<a href="ms-coding-to-do-list.netlify.app" target="_blank">To-Do List</a>
-															</li>
-																	
 												</ul>
 											</div>
 										</article>
