Add more react and js project bullets

--- a/index.html
+++ b/index.html
@@ -176,6 +176,15 @@
 													<li class="fa-react">
 														<a href="https://random-quote-machine-techieEliot.netlify.app/" target="_blank">Random Quote Machine App</a>
 													</li>
+													<li class="fa-react">
+														<a href="https://markdown-editor-techieeliot.netlify.app" target="_blank">Markdown Editor App</a>
+													</li>
+													<li class="fa-react">
+														<a href="https://drum-machine-techieeliot.netlify.app" target="_blank">Drum Machine App (Work In Progress)</a>
+													</li>
+													<li class="fa-react">
+														<a href="https://calculator-techieeliot.netlify.app" target="_blank">Gatsby Calculator App (Work In Progress)</a>
+													</li>
 												</ul>
 											</div>
 										</article>
@@ -190,8 +199,11 @@
 														<a href="https://github.com/techieeliot/legendary-palm-tree" target="_blank">SQL CRUD Files</a>
 													</li>
 													<li class="fa-js-square">
+															<a href="https://acme-techieeliot.netlify.app/" target="_blank">Acme Product Landing Page (Work In Progress)</a>
+													</li>
+													<li class="fa-js-square">
 															<a href="https://ms-coding-shopping-cart.netlify.app/" target="_blank">Shopping Cart</a>
-														</li>
+													</li>
 													<li class="fa-js-square">
 														<a href="https://ms-coding-tic-tac-toe.netlify.app/" target="_blank">Tic Tac Toe</a>
 													</li>
