Added two sections: reference and learning experiences

--- a/index.html
+++ b/index.html
@@ -77,22 +77,22 @@
 											<ul class="feature-icons">	
 												<li>
 													<a href="#four">
-														<button class="button primary icon fa-envelope-open">Contact form</button>
+														<button class="button primary icon fa-envelope-open fit">Contact form</button>
 													</a>
 												</li>
 												<li>
 													<a href="https://twitter.com/techieEliot" target="_blank">
-														<button class="button primary icon fa-twitter">techieEliot</button>
+														<button class="button primary icon fa-twitter fit">techieEliot</button>
 													</a>
 												</li>
 												<li>
 													<a href="https://github.com/techieeliot" target="_blank">
-														<button class="button primary icon fa-github">techieEliot</button>
+														<button class="button primary icon fa-github fit">techieEliot</button>
 													</a>
 												</li>
 												<li>
 													<a href="mailto:techieEliot@gmail.com" target="_blank">
-														<button class="button primary icon fa-envelope">techieEliot@gmail.com</button>
+														<button class="button primary icon fa-envelope fit">techieEliot@gmail.com</button>
 													</a>
 												</li>
 											</ul>
@@ -113,14 +113,24 @@
 											my back-end programming knowledge.
 										</p>
 										<div class="inner">
-											<ul class="feature-icons">	
+											<ul class="feature-icons resume">	
 												<li>
-													<a href="https://drive.google.com/file/d/1i4mhoFFhAci7rMYGI_ArMhYH6HQ1WM1j/view" target="_blank" rel="noopener noreferrer">
-														<button class="button primary icon fa-file">View my Resume</button>
+													<a href="https://drive.google.com/file/d/1i4mhoFFhAci7rMYGI_ArMhYH6HQ1WM1j/view" role="button" target="_blank" rel="noopener noreferrer" class="button primary fit icon fa-file ">
+														View my Resume
 													</a>
 												</li>
 											</ul>
 										</div>
+										<h3>Things Others Are Saying</h3>
+										<blockquote>
+											<p>I've known Eliot for a few years, having attended church together. Eliot is not only of great moral character, but also a tenacious individual in the pursuit of his goals. </p>
+											<p>Eliot approached me wanting to learn about software development just a couple of years ago, and in a short time has learned far more about the topic than I came close to in my first two years — and all of this while just learning in his free time and also having a wife and children.</p>
+											<p>Eliot is and will continue to be a great contributor to society. He has a positive attitude, a willingness to learn, and a determination to accomplish whatever is in front of him.</p>
+										</blockquote>
+										<p>May 2020</p>
+										<p>- J.C. Hiatt, Software Engineer and Conference/Meetup Organizer</p>
+										<a href="https://twitter.com/jchiatt" role="button" class="button alt icon fa-twitter small">@jchiatt</a>
+										<a href="mailto:jc@jchiatt.com" role="button" class="button alt icon fa-envelope small">jc@jchiatt.com</a>
 									</article>
 								</div>
 							</section>
@@ -161,7 +171,7 @@
 									<h3>Things I Have Created</h3>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="hands on a mac laptop keyboard shot from above" /></a>
+											<span class="image"><img src="images/pic01.jpg" alt="hands on a mac laptop keyboard shot from above" /></span>
 											<div class="inner">
 												<h4>Node JS & React JS Sites</h4>
 												<p>Note: you'll need to follow the npm commands for certain projects</p>
@@ -180,16 +190,18 @@
 														<a href="https://markdown-editor-techieeliot.netlify.app" target="_blank">Markdown Editor App</a>
 													</li>
 													<li class="fa-react">
-														<a href="https://drum-machine-techieeliot.netlify.app" target="_blank">Drum Machine App (Work In Progress)</a>
+														<a href="https://drum-machine-techieeliot.netlify.app" target="_blank">Drum Machine App (In Progress)</a>
 													</li>
 													<li class="fa-react">
-														<a href="https://calculator-techieeliot.netlify.app" target="_blank">Gatsby Calculator App (Work In Progress)</a>
+														<a href="https://calculator-techieeliot.netlify.app" target="_blank">Gatsby Calculator App (In Progress)</a>
 													</li>
 												</ul>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="man with colorful socks seated in a chair crossed-legged reading javascript & jquery" /></a>
+											<span class="image">
+												<img src="images/pic02.jpg" alt="man with colorful socks seated in a chair crossed-legged reading javascript & jquery" />
+											</span>
 											<div class="inner">
 												<h4>SQL and JavaScript Sites</h4>
 												<p>Since the beginning of April 2019, I have created sites with these technologies.
@@ -199,7 +211,7 @@
 														<a href="https://github.com/techieeliot/legendary-palm-tree" target="_blank">SQL CRUD Files</a>
 													</li>
 													<li class="fa-js-square">
-															<a href="https://acme-techieeliot.netlify.app/" target="_blank">Acme Product Landing Page (Work In Progress)</a>
+															<a href="https://acme-techieeliot.netlify.app/" target="_blank">Product Landing Page (In Progress)</a>
 													</li>
 													<li class="fa-js-square">
 															<a href="https://ms-coding-shopping-cart.netlify.app/" target="_blank">Shopping Cart</a>
@@ -214,7 +226,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="stack of books with html & css book at the bottom" /></a>
+											<span class="image"><img src="images/pic03.jpg" alt="stack of books with html & css book at the bottom" /></span>
 											<div class="inner">
 												<h4>Pure HTML, CSS, Bootstrap, jQuery Sites, and Tailwind CSS</h4>
 												<p>During the months of October 2018 through March 2019, I learned HTML and CSS.</p>
@@ -234,8 +246,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="WordPress on a computer screen" />
-											</a>
+											<span class="image"><img src="images/pic04.jpg" alt="WordPress on a computer screen" /></span>
 											<div class="inner">
 												<h4>WordPress & Wix Sites</h4>
 												<p>In December 2018, I created sites using content management systems.</p>
@@ -248,6 +259,24 @@
 													</li>
 
 												</ul>	
+											</div>
+										</article>
+										<article>
+											<span class="video">
+												<iframe width="100%" height="100%" src="https://www.youtube.com/embed/URwNDebE32I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+											</span>
+
+											<div class="inner">
+												<h4>Learning Experiences</h4>
+												<p>Since 2018, I have been an instructor and mentor to others</p>
+												<ul class="feature-icons">
+													<li class="fa-free-code-camp">
+														<a href="https://www.meetup.com/freeCodeCamp-Jackson-Mississippi-Meetup-Group/" target="_blank">freeCodeCamp Jackson, MS Organizer and Lead Instructor</a>
+													</li>
+													<li class="fa-laptop-code">
+														<a href="https://www.w3develops.org/" target="_blank">Developer In Residence at w3Develops</a>
+													</li>
+												</ul>
 											</div>
 										</article>
 									</div>
@@ -267,8 +296,8 @@
 											<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
 											<div class="col-12">
 												<ul class="actions">
-													<li><input type="submit" class="primary" value="Send Message" /></li>
-													<li><input type="reset" value="Reset Form" /></li>
+													<li><input type="submit" class="button" value="Send Message" /></li>
+													<li><input type="reset" class="button alt"value="Reset Form" /></li>
 												</ul>
 											</div>
 										</div>
@@ -276,8 +305,8 @@
 								</div>
 							</section>
 
-						<!-- Five -->
-						<!--
+						<!-- Five
+						
 							<section id="five">
 								<div class="container">
 									<h3>Elements</h3>
@@ -643,8 +672,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</section>
 
 								</div>
-							</section>
-						-->
+							</section> -->
+						
 
 					</div>
 
