Add second reference

--- a/index.html
+++ b/index.html
@@ -289,6 +289,21 @@
 										<p>- J.C. Hiatt, Software Engineer and Conference/Meetup Organizer</p>
 										<a href="https://twitter.com/jchiatt" role="button" class="button alt icon fa-twitter small">@jchiatt</a>
 										<a href="mailto:jc@jchiatt.com" role="button" class="button alt icon fa-envelope small">jc@jchiatt.com</a>
+										<hr>
+										<blockquote>
+											<p>I had the great pleasure of teaching Eliot at the Mississippi Coding Academy where I have been the night class instructor since the beginning of the year. 
+												He is a fast learner, an inspiring student, and a helpful peer.</p>
+											<p>When we started working on group projects in class, Eliot was extremely helpful both in the questions 
+												he asked and the actions he took, rolling his chair over to classmates (back when that was a thing) and 
+												helping them along. He would then continue working on the project after class, planning out next steps, 
+												finding which issues could help other students grow, and developing new questions for the next lecture. 
+												Eliot is someone who is genuinely motivated to understand problems and help teams get to solutions.
+											</p>	
+											<p>If you need any more specific information please do not hesitate to email me, and I would be happy to elaborate further.</p>											
+										</blockquote>
+										<p>August 2020</p>
+										<p>- Levi, Senior Software Engineer and Bootcamp Instructor</p>
+										<a href="mailto:Levi.Ross.King@gmail.com" role="button" class="button alt icon fa-envelope small">Levi.Ross.King@gmail.com</a>
 									</div>
 								</div>
 							</section>
