Fix to-do list hyperlink

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 														<a href="https://ms-coding-tic-tac-toe.netlify.app/" target="_blank">Tic Tac Toe</a>
 													</li>
 													<li class="fa-js-square">
-														<a href="ms-coding-to-do-list.netlify.app" target="_blank">To-Do List</a>
+														<a href="https://ms-coding-to-do-list.netlify.app/" target="_blank">To-Do List</a>
 													</li>
 												</ul>
 											</div>
