Add unicafe link

--- a/index.html
+++ b/index.html
@@ -189,6 +189,9 @@
 													<li class="fa-react">
 														<a href="https://calculator-techieeliot.netlify.app" target="_blank">Gatsby Calculator App (In Progress)</a>
 													</li>
+													<li class="fa-react">
+														<a href="https://unicafe-techieeliot.netlify.app" target="_blank">Feedback App</a>
+													</li>
 												</ul>
 											</div>
 										</article>
