--- a/index.html
+++ b/index.html
@@ -190,6 +190,9 @@
 														<a href="https://calculator-techieeliot.netlify.app" target="_blank">Gatsby Calculator App (In Progress)</a>
 													</li>
 													<li class="fa-react">
+														<a href="https://anecdote-techieeliot.netlify.app" target="_blank">Anecdote App</a>
+													</li>
+													<li class="fa-react">
 														<a href="https://unicafe-techieeliot.netlify.app" target="_blank">Feedback App</a>
 													</li>
 												</ul>
