Fix typos in About me section

--- a/index.html
+++ b/index.html
@@ -100,22 +100,24 @@
 											</ul>
 										</div>
 										<h3 id="one">Things About Me</h3>
-										<p class="bio-section">I'm currently seeking a full-time role and provide consultation
-											for small businesses as a software engineering contractor. 
-											I taught myself to code five years, and since then, I've always been learning 
+										<p class="bio-section">I'm currently seeking a full-time JavaScript role and provide consultation
+											for small businesses as a React.js software engineering contractor.
+										</p>
+										<p class="bio-section">I taught myself to code five years, and since then, I've always been learning 
 											on my own including developing automated tasks at work, creating personal projects, and 
-											organizing virtual and in-person study groups. I taught myself front-end and back-end 
-											web development while working 
-											as support staff at law firms. 
+											organizing virtual and in-person study groups. 
 										</p>
-										<p class="bio-section">I began working as a tech consultant in 2018, and 
-											where I enjoyed building websites, tools, and applications for businesses. 
-											Then in 2019, I transitioned into 
-											teaching web development at a local private school. 
-											At the end of 2019, I joined a bootcamp in the 
-											evenings to mainly receive help with my job search and fill some gaps in 
-											my back-end programming knowledge.
+										<p class="bio-section">I taught myself front-end and back-end 
+											web development while working as support staff at law firms, 
+											then I left the legal world to begin teaching a high school web development course. 
 										</p>
+										<p class="bio-section">In 2018, I started working for myself as a tech consultant, 
+											where I enjoy building websites, tools, and applications for businesses. 
+											At the end of 2019, I joined a local back-end coding bootcamp program in the 
+											evenings to mainly fill some knowledge gaps in 
+											my back-end programming skills.
+										</p>
+										<p class="bio-section">Please review my portfolio and resume. I appreciate that you've read this far and would love to chat with you.</p>
 										<div class="inner">
 											<ul class="feature-icons resume">	
 												<li>
