Add linkedin links with fa icons

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 				<footer>
 					<ul class="icons">
 						<li><a href="https://twitter.com/techieEliot" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.linkedin.com/in/techieeliot/" class="icon fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://www.facebook.com/eliot.b.sanford" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.instagram.com/techieeliot/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="https://github.com/techieeliot" class="icon fa-github"><span class="label">Github</span></a></li>
@@ -72,7 +73,8 @@
 										</p>
 										<p>Please browse below and contact me via 
 											<a href="#four">the form at the bottom of this page</a>, 
-											<a href="https://twitter.com/techieEliot" target="_blank">Twitter</a>, or 
+											<a href="https://twitter.com/techieEliot" target="_blank">Twitter</a>, 
+											<a href="https://www.linkedin.com/in/techieeliot/" target="_blank">LinkedIn</a>,or 
 											<a href="mailto:techieEliot@gmail.com">my email</a>.
 										</p> 
 										<div class="inner">
@@ -85,6 +87,11 @@
 												<li>
 													<a href="https://twitter.com/techieEliot" target="_blank">
 														<button class="button primary icon fa-twitter fit">techieEliot</button>
+													</a>
+												</li>
+												<li>
+													<a href="https://www.linkedin.com/in/techieeliot/" target="_blank">
+														<button class="button primary icon fa-linkedin-in fit">techieEliot</button>
 													</a>
 												</li>
 												<li>
@@ -715,6 +722,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<div class="container">
 							<ul class="icons">
 								<li><a href="https://twitter.com/techieEliot" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://www.linkedin.com/in/techieeliot/" class="icon fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://www.facebook.com/eliot.b.sanford" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.instagram.com/techieeliot/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://github.com/techieeliot" class="icon fa-github"><span class="label">Github</span></a></li>
