Change some wording in the about me section and buttons.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 									<article>
 										<h3>Welcome to my portfolio page!</h3>
 										<p class="bio-section">I'm excited to share with you some things about me, 
-											what I can do, and have created.
+											what I can do, and have created, plus some comments from other engineers.
 										</p>
 										<p>Please browse below and contact me via 
 											<a href="#four">the form at the bottom of this page</a>, 
@@ -86,22 +86,22 @@
 												</li>
 												<li>
 													<a href="https://twitter.com/techieEliot" target="_blank">
-														<button class="button primary icon fa-twitter fit">techieEliot</button>
+														<button class="button primary icon fa-twitter fit">Twitter</button>
 													</a>
 												</li>
 												<li>
 													<a href="https://www.linkedin.com/in/techieeliot/" target="_blank">
-														<button class="button primary icon fa-linkedin-in fit">techieEliot</button>
+														<button class="button primary icon fa-linkedin-in fit">LinkedIn</button>
 													</a>
 												</li>
 												<li>
 													<a href="https://github.com/techieeliot" target="_blank">
-														<button class="button primary icon fa-github fit">techieEliot</button>
+														<button class="button primary icon fa-github fit">GitHub</button>
 													</a>
 												</li>
 												<li>
 													<a href="mailto:techieEliot@gmail.com" target="_blank">
-														<button class="button primary icon fa-envelope fit">techieEliot@gmail.com</button>
+														<button class="button primary icon fa-envelope fit">Email</button>
 													</a>
 												</li>
 											</ul>
