Add trviia game and reorganize projects

--- a/index.html
+++ b/index.html
@@ -181,28 +181,31 @@
 												</p>
 												<ul class="feature-icons">
 													<li class="fa-react">
-														<a href="https://thebikerapp.site" target="_blank">The Biker App</a>
+														<a href="https://random-quote-machine-techieEliot.netlify.app/" target="_blank">Random Quote Machine</a>
 													</li>
 													<li class="fa-react">
-														<a href="https://kikisaver.site" target="_blank">Kiki Saver</a>
-													</li>
-													<li class="fa-react">
-														<a href="https://random-quote-machine-techieEliot.netlify.app/" target="_blank">Random Quote Machine App</a>
-													</li>
-													<li class="fa-react">
-														<a href="https://markdown-editor-techieeliot.netlify.app" target="_blank">Markdown Editor App</a>
-													</li>
-													<li class="fa-react">
-														<a href="https://drum-machine-techieeliot.netlify.app" target="_blank">Drum Machine App (In Progress)</a>
-													</li>
-													<li class="fa-react">
-														<a href="https://calculator-techieeliot.netlify.app" target="_blank">Gatsby Calculator App (In Progress)</a>
+														<a href="https://trivia-game-techieeliot.netlify.app/" target="_blank">Trivia Game</a>
 													</li>
 													<li class="fa-react">
 														<a href="https://anecdote-techieeliot.netlify.app" target="_blank">Anecdote App</a>
 													</li>
 													<li class="fa-react">
 														<a href="https://unicafe-techieeliot.netlify.app" target="_blank">Feedback App</a>
+													</li>
+													<li class="fa-react">
+														<a href="https://thebikerapp.site" target="_blank">The Biker App</a>
+													</li>
+													<li class="fa-react">
+														<a href="https://kikisaver.site" target="_blank">Kiki Saver</a>
+													</li>
+													<li class="fa-react">
+														<a href="https://markdown-editor-techieeliot.netlify.app" target="_blank">Markdown Editor</a>
+													</li>
+													<li class="fa-react">
+														<a href="https://drum-machine-techieeliot.netlify.app" target="_blank">Drum Machine (In Progress)</a>
+													</li>
+													<li class="fa-react">
+														<a href="https://calculator-techieeliot.netlify.app" target="_blank">Gatsby Calculator (In Progress)</a>
 													</li>
 												</ul>
 											</div>
@@ -216,20 +219,20 @@
 												<p>Since the beginning of April 2019, I have created sites with these technologies.
 												</p>
 												<ul class="feature-icons">
-													<li class="fa-database">
-														<a href="https://github.com/techieeliot/legendary-palm-tree" target="_blank">SQL CRUD Files</a>
+													<li class="fa-js-square">
+														<a href="https://acme-techieeliot.netlify.app/" target="_blank">Product Landing Page (In Progress)</a>
 													</li>
 													<li class="fa-js-square">
-															<a href="https://acme-techieeliot.netlify.app/" target="_blank">Product Landing Page (In Progress)</a>
-													</li>
-													<li class="fa-js-square">
-															<a href="https://ms-coding-shopping-cart.netlify.app/" target="_blank">Shopping Cart</a>
+														<a href="https://ms-coding-shopping-cart.netlify.app/" target="_blank">Shopping Cart</a>
 													</li>
 													<li class="fa-js-square">
 														<a href="https://ms-coding-tic-tac-toe.netlify.app/" target="_blank">Tic Tac Toe</a>
 													</li>
 													<li class="fa-js-square">
 														<a href="https://ms-coding-to-do-list.netlify.app/" target="_blank">To-Do List</a>
+													</li>
+													<li class="fa-database">
+														<a href="https://github.com/techieeliot/legendary-palm-tree" target="_blank">SQL CRUD Files</a>
 													</li>
 												</ul>
 											</div>
