Add image of youtube video for a responsive look

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 												</p>
 												<ul class="feature-icons">
 													<li class="fa-js-square">
-														<a href="https://acme-techieeliot.netlify.app/" target="_blank">Product Landing Page (In Progress)</a>
+														<a href="https://acme-techieeliot.netlify.app/" target="_blank">Product Landing Page</a>
 													</li>
 													<li class="fa-js-square">
 														<a href="https://ms-coding-shopping-cart.netlify.app/" target="_blank">Shopping Cart</a>
@@ -269,14 +269,14 @@
 													<li class="fa-wix">
 														<a href="https://www.msparalegals.org/" target="_blank">Mississppi Paralegals Association</a>
 													</li>
-
+													
 												</ul>	
 											</div>
 										</article>
 										<article>
-											<span class="video">
-												<iframe width="100%" height="100%" src="https://www.youtube.com/embed/URwNDebE32I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-											</span>
+												<a href="https://www.youtube.com/embed/URwNDebE32I" target="_blank">
+													<span class="image"><img src="images/coding-class-express.png" alt="Coding class express poster at the Bolden Moore Library on March 7, 2020" /></span>
+												</a>
 											<div class="inner">
 												<h4>Learning Experiences</h4>
 												<p>Since 2018, I have been an instructor and mentor to others</p>
