--- a/index.html
+++ b/index.html
@@ -123,12 +123,15 @@
 											evenings to mainly fill some knowledge gaps in 
 											my back-end programming skills.
 										</p>
-										<p class="bio-section">Please review my portfolio and resume. I appreciate that you've read this far and would love to chat with you.</p>
+										<p class="bio-section">Please review my portfolio and resumé. I appreciate that you've read this far and would love to chat with you.</p>
+										<div class="inner hide-resumé">
+											<iframe id="resumé-box" src="https://drive.google.com/file/d/1i4mhoFFhAci7rMYGI_ArMhYH6HQ1WM1j/preview" width="600" height="700"></iframe>
+										</div>
 										<div class="inner">
-											<ul class="feature-icons resume">	
+											<ul class="feature-icons view-resumé">	
 												<li>
 													<a href="https://drive.google.com/file/d/1i4mhoFFhAci7rMYGI_ArMhYH6HQ1WM1j/view" role="button" target="_blank" rel="noopener noreferrer" class="button primary fit icon fa-file ">
-														View my Resume
+														View my Resumé
 													</a>
 												</li>
 											</ul>
