--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 										<div class="inner">
 											<ul class="feature-icons view-resumé">	
 												<li>
-													<a href="https://drive.google.com/file/d/1i4mhoFFhAci7rMYGI_ArMhYH6HQ1WM1j/view" role="button" target="_blank" rel="noopener noreferrer" class="button primary fit icon fa-file ">
+													<a href="https://drive.google.com/file/d/1i4mhoFFhAci7rMYGI_ArMhYH6HQ1WM1j/view" role="button" target="_blank" rel="noopener noreferrer" class="button primary fit icon fa-external-link-alt">
 														View my Resumé
 													</a>
 												</li>
