Add countries app to react projects

--- a/index.html
+++ b/index.html
@@ -195,6 +195,9 @@
 														<a href="https://markdown-editor-techieeliot.netlify.app" target="_blank">Markdown Previewer</a>
 													</li>
 													<li class="fa-react">
+														<a href="https://countries-techieeliot.netlify.app" target="_blank">Countries + Weather APIs</a>
+													</li>
+													<li class="fa-react">
 														<a href="https://phonebook-techieeliot.netlify.app" target="_blank">Phonebook App</a>
 													</li>
 													<li class="fa-react">
